--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-env": "^1.7.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "1.15.0",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "2.7.1",
     "cross-env": "^5.1.3",
     "errorhandler": "1.4.3",
