feat: add user model and set up jwt etc

--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "express-validation": "^1.0.2",
     "http-status": "^1.0.1",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^8.5.1",
     "meteor-random": "^0.0.3",
     "method-override": "^2.3.9",
     "methods": "1.1.2",
     "moment": "^2.20.1",
     "morgan": "1.7.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.6",
